5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1764_674.log
== TEST (2019-05-23 11:51:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:03:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:04:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 2))

-- EXECUTION TIME:
0.521411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 6, in <module>
    print(sinze(vet0))
NameError: name 'sinze' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:04:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:05:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- EXECUTION TIME:
0.378315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 6, in <module>
    print(sinze(vet0))
NameError: name 'sinze' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:08:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:08:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(sinze(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- EXECUTION TIME:
0.471175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 6, in <module>
    print(sinze(vet0))
NameError: name 'sinze' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:11:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / sinze(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:11:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print([4])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:20:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print(vet0[0])
print(vet0[size(vet0)-1])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:20:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print(vet0[0])
print(vet0[size(vet0)-1])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- EXECUTION TIME:
0.469531
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:21:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print(vet0[0])
print(vet0[size(vet0)-1])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:23:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print(vet0[0])
print(vet0[size(vet0)-1])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- EXECUTION TIME:
0.315195
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
[13 10  1  9  7 20  5 20 14 16  5 13 11  7  6  2 19 18  8 19 13  5  8  4
  3 16  8  7  9  2 13 11 14 10 15 11  6 17 16 10 15  6 12  9  4 15 16 10
 15  7 17 10  9  6 12 18  2  9  5 17 19  5 20  4  5 11  3 15 15  3 20 11
  5 13  9 16 14 15 11 19 15  9 14 10  7  1  6  7]
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:23:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

vet0 = array(eval(input("vet0: ")))
print(size(vet0))
print(vet0[0])
print(vet0[size(vet0)-1])
print(max([vet0]))
print(min([vet0]))
print(sum([vet0]))
media = (sum(vet0) / size(vet0))
print(round(media, 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:47:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
# Vetor inserido pelo usuário
vet0 = array(eval(input("vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:48:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
# Vetor inserido pelo usuário
vet0 = array(eval(input("vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:48:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
# Vetor inserido pelo usuário
vet0 = array(eval(input("vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- EXECUTION TIME:
0.504204
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:48:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
# Vetor inserido pelo usuário
vet0 = array(eval(input("vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- EXECUTION TIME:
0.443224
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:48:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
# Vetor inserido pelo usuário
vet0 = array(eval(input("vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- EXECUTION TIME:
0.361022
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:54:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:56:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- EXECUTION TIME:
0.342435
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:56:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:10:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 05:49:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 05:50:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*

# Vetor inserido pelo usuário
vet0 = array(eval(input("Vet0: ")))
# Quantidade de elementos do vetor?
print(size(vet0))
# Primeiro elemento do Vetor
print(vet0[0])
# Último elemento do Vetor
print(vet0[size(vet0)-1])
# Maior elemento do Vetor
print(max(vet0))
# Menor elemento do Vetor
print(min(vet0))
# Soma dos elementos do Vetor
print(sum(vet0))
# Média aritmética dos elementos do Vetor
media = (sum(vet0) / size(vet0))
print(round(media, 2))
-- EXECUTION TIME:
0.348009
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
